Initial commit of containerization demo
Change-Id: I2682700982e0edf355ac53ebca3688df5a66fbbd
Issue-ID: SO-670
Signed-off-by: Benjamin, Max (mb388a) <mb388a@us.att.com>