@@ -7,9 +7,9 @@
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- *
+ * 
  *      http://www.apache.org/licenses/LICENSE-2.0
- *
+ * 
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -30,8 +30,6 @@ import javax.ws.rs.core.MultivaluedMap;
 import javax.ws.rs.core.Response;
 
 import org.apache.commons.lang3.StringUtils;
-import org.hibernate.Session;
-import org.openecomp.mso.apihandler.common.ValidationException;
 import org.openecomp.mso.apihandlerinfra.Constants;
 import org.openecomp.mso.apihandlerinfra.MsoException;
 import org.openecomp.mso.apihandlerinfra.Status;
@@ -46,20 +44,25 @@ import org.openecomp.mso.apihandlerinfra.tenantisolationbeans.RequestParameters;
 import org.openecomp.mso.apihandlerinfra.tenantisolationbeans.ResourceType;
 import org.openecomp.mso.apihandlerinfra.tenantisolationbeans.ServiceModelList;
 import org.openecomp.mso.apihandlerinfra.vnfbeans.RequestStatusType;
-import org.openecomp.mso.db.AbstractSessionFactoryManager;
+import org.openecomp.mso.db.request.beans.InfraActiveRequests;
+import org.openecomp.mso.db.request.data.repository.InfraActiveRequestsRepository;
+import org.openecomp.mso.exceptions.ValidationException;
 import org.openecomp.mso.logger.MessageEnum;
 import org.openecomp.mso.logger.MsoLogger;
-import org.openecomp.mso.requestsdb.InfraActiveRequests;
-import org.openecomp.mso.requestsdb.RequestsDatabase;
-import org.openecomp.mso.requestsdb.RequestsDbSessionFactoryManager;
 import org.openecomp.mso.serviceinstancebeans.PolicyException;
 import org.openecomp.mso.serviceinstancebeans.RequestError;
 import org.openecomp.mso.serviceinstancebeans.ServiceException;
 import org.openecomp.mso.utils.UUIDChecker;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.context.annotation.Scope;
+import org.springframework.stereotype.Component;
 
 import com.fasterxml.jackson.annotation.JsonInclude.Include;
+import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
+@Component
+@Scope("prototype")
 public class TenantIsolationRequest {
 
     private String requestId;
@@ -71,15 +74,16 @@ public class TenantIsolationRequest {
     private String httpResponse;
     private String responseBody;
     private RequestStatusType status;
-    private CloudOrchestrationRequest cor;
     private String operationalEnvironmentId;
     private long progress = Constants.PROGRESS_REQUEST_RECEIVED;
     private String requestScope;
+    private CloudOrchestrationRequest cor;
+    
+    @Autowired 
+    private InfraActiveRequestsRepository infraActiveRequestsRepository;
+    
+    private static MsoLogger msoLogger = MsoLogger.getMsoLogger (MsoLogger.Catalog.APIH, TenantIsolationRequest.class);
 
-    
-    
-    private static MsoLogger msoLogger = MsoLogger.getMsoLogger (MsoLogger.Catalog.APIH);
-    protected AbstractSessionFactoryManager requestsDbSessionFactoryManager = new RequestsDbSessionFactoryManager ();
 
 	TenantIsolationRequest (String requestId) {
         this.requestId = requestId;
@@ -91,23 +95,22 @@ public class TenantIsolationRequest {
     }
     
 	void parse(CloudOrchestrationRequest request, HashMap<String,String> instanceIdMap, Action action) throws ValidationException {
-		msoLogger.debug ("Validating the Cloud Orchestration request");
 		this.cor = request;
 		this.requestInfo = request.getRequestDetails().getRequestInfo();
 		
 		try{
-        	ObjectMapper mapper = new ObjectMapper();
+			ObjectMapper mapper = new ObjectMapper();
         	requestJSON = mapper.writeValueAsString(request.getRequestDetails());
 
-        } catch(Exception e){
-        	throw new ValidationException ("Parse ServiceInstanceRequest to JSON string");
+        } catch(JsonProcessingException e){
+        	throw new ValidationException ("Parse ServiceInstanceRequest to JSON string", true);
         }
 		
 		String envId = null;
 		if(instanceIdMap != null) {
 			envId = instanceIdMap.get("operationalEnvironmentId");
 			if(envId != null && !UUIDChecker.isValidUUID (envId)){
-				throw new ValidationException ("operationalEnvironmentId");
+				throw new ValidationException ("operationalEnvironmentId", true);
 			}
 			cor.setOperationalEnvironmentId(envId);
 		}
@@ -128,8 +131,11 @@ public class TenantIsolationRequest {
 	private void relatedInstanceValidation(Action action, RequestDetails requestDetails, RequestParameters requestParameters) throws ValidationException {
 		RelatedInstanceList[] instanceList = requestDetails.getRelatedInstanceList();
 		
+		if (requestParameters == null) {
+			throw new ValidationException("requestParameters", true);
+		}
 		if((Action.activate.equals(action) || Action.deactivate.equals(action)) && OperationalEnvironment.ECOMP.equals(requestParameters.getOperationalEnvironmentType())) {
-			throw new ValidationException("operationalEnvironmentType in requestParameters");
+			throw new ValidationException("operationalEnvironmentType in requestParameters", true);
 		}
 		
 		if(!Action.deactivate.equals(action) && OperationalEnvironment.VNF.equals(requestParameters.getOperationalEnvironmentType())) {
@@ -138,23 +144,23 @@ public class TenantIsolationRequest {
 			 		RelatedInstance relatedInstance = relatedInstanceList.getRelatedInstance();
 			 		
 			 		if(relatedInstance.getResourceType() == null) {
-			 			throw new ValidationException("ResourceType in relatedInstance");
+			 			throw new ValidationException("ResourceType in relatedInstance", true);
 			 		}
 			 		
 			 		if(!empty(relatedInstance.getInstanceName()) && !relatedInstance.getInstanceName().matches(Constants.VALID_INSTANCE_NAME_FORMAT)) {
-						throw new ValidationException ("instanceName format");
+						throw new ValidationException ("instanceName format", true);
 					} 
 			 		
 			 		if (empty (relatedInstance.getInstanceId ())) {
-			 			throw new ValidationException ("instanceId in relatedInstance");
+			 			throw new ValidationException ("instanceId in relatedInstance", true);
 			 		}
 			 		
 			 		if (!UUIDChecker.isValidUUID (relatedInstance.getInstanceId ())) {
-			 			throw new ValidationException ("instanceId format in relatedInstance");
+			 			throw new ValidationException ("instanceId format in relatedInstance", true);
 			 		}
 			 	}
 			} else {
-				throw new ValidationException ("relatedInstanceList");
+				throw new ValidationException ("relatedInstanceList", true);
 			}
 		}
 	}
@@ -163,69 +169,69 @@ public class TenantIsolationRequest {
 		
 		if(requestParameters != null) {
 			if(!Action.deactivate.equals(action) && requestParameters.getOperationalEnvironmentType() == null) {
-				throw new ValidationException ("OperationalEnvironmentType");
+				throw new ValidationException ("OperationalEnvironmentType", true);
 			}
 			
 			if (Action.create.equals(action) && empty(requestParameters.getTenantContext())) {
-				throw new ValidationException ("Tenant Context");
+				throw new ValidationException ("Tenant Context", true);
 			}
 			if (!Action.deactivate.equals(action) && empty(requestParameters.getWorkloadContext())) {
-				throw new ValidationException ("Workload Context");
+				throw new ValidationException ("Workload Context", true);
 			}
 			
 			Manifest manifest = requestParameters.getManifest();
 			
 			if(Action.activate.equals(action)) {
 				if(manifest == null) {
-					throw new ValidationException ("Manifest on Activate");
+					throw new ValidationException ("Manifest on Activate", true);
 				} else {
 					List<ServiceModelList> serviceModelList = manifest.getServiceModelList();
 					
-					if(serviceModelList.size() == 0) {
-						throw new ValidationException (" empty ServiceModelList");
+					if(serviceModelList.isEmpty()) {
+						throw new ValidationException (" empty ServiceModelList", true);
 					}
 					
 					for(ServiceModelList list : serviceModelList) {
 						if(empty(list.getServiceModelVersionId())) {
-							throw new ValidationException ("ServiceModelVersionId");
+							throw new ValidationException ("ServiceModelVersionId", true);
 						}
 						
 						if (!UUIDChecker.isValidUUID (list.getServiceModelVersionId())) {
-				 			throw new ValidationException ("ServiceModelVersionId format");
+				 			throw new ValidationException ("ServiceModelVersionId format", true);
 				 		}
 						
 						if(list.getRecoveryAction() == null) {
-							throw new ValidationException ("RecoveryAction");
+							throw new ValidationException ("RecoveryAction", true);
 						}
 					}
 				}
 			}
 		} else if(!Action.deactivate.equals(action)) {
-			throw new ValidationException("request Parameters");
+			throw new ValidationException("request Parameters", true);
 		}
 	}
 
 	private void requestInfoValidation(Action action, RequestInfo requestInfo) throws ValidationException {
 		 
 		if(Action.create.equals(action) && empty(requestInfo.getInstanceName())) {
-			throw new ValidationException ("instanceName");
+			throw new ValidationException ("instanceName", true);
 		} 
 		
 		if(!empty(requestInfo.getInstanceName()) && !requestInfo.getInstanceName().matches(Constants.VALID_INSTANCE_NAME_FORMAT)) {
-			throw new ValidationException ("instanceName format");
+			throw new ValidationException ("instanceName format", true);
 		} 
 		
 		if (empty(requestInfo.getSource())) {
-        	throw new ValidationException ("source");
+        	throw new ValidationException ("source", true);
         }
 		
 		if(empty(requestInfo.getRequestorId())) {
-        	throw new ValidationException ("requestorId");
+        	throw new ValidationException ("requestorId", true);
         }
 		
 		ResourceType resourceType = requestInfo.getResourceType();
 		if(resourceType == null) {
-			throw new ValidationException ("resourceType");
+			throw new ValidationException ("resourceType", true);
 		}
 		
 		this.requestScope = resourceType.name();
@@ -233,136 +239,113 @@ public class TenantIsolationRequest {
 	
 	void parseOrchestration (CloudOrchestrationRequest cor) throws ValidationException {
 
-        msoLogger.debug ("Validating the Orchestration request");
-
         this.cor = cor;
 
         try{
         	ObjectMapper mapper = new ObjectMapper();
-        	//mapper.configure(Feature.WRAP_ROOT_VALUE, true);
         	requestJSON = mapper.writeValueAsString(cor.getRequestDetails());
 
-        } catch(Exception e){
+        } catch(JsonProcessingException e){
         	throw new ValidationException ("Parse CloudOrchestrationRequest to JSON string", e);
         }
 
+        if(cor.getRequestDetails() == null){
+            throw new ValidationException("requestDetails", true);
+        }
         this.requestInfo = cor.getRequestDetails().getRequestInfo();
 
         if (this.requestInfo == null) {
-            throw new ValidationException ("requestInfo");
+            throw new ValidationException ("requestInfo", true);
         }
 
         if (empty (requestInfo.getSource ())) {
-        	throw new ValidationException ("source");
+        	throw new ValidationException ("source", true);
         }
         if (empty (requestInfo.getRequestorId ())) {
-        	throw new ValidationException ("requestorId");
+        	throw new ValidationException ("requestorId", true);
         }
     }
 	
-    public void createRequestRecord (Status status, Action action) {
-    	 Session session = null;
-         try {
+    public void createRequestRecord (Status status, Action action){
 
-             session = requestsDbSessionFactoryManager.getSessionFactory ().openSession ();
-             session.beginTransaction ();
+		InfraActiveRequests aq = new InfraActiveRequests ();
+		aq.setRequestId (requestId);
 
-             if (null == cor) {
-                 cor = new CloudOrchestrationRequest();
-             }
+		aq.setRequestAction(action.name());
+		aq.setAction(action.name());
 
-             InfraActiveRequests aq = new InfraActiveRequests ();
-             aq.setRequestId (requestId);
+		Timestamp startTimeStamp = new Timestamp (System.currentTimeMillis());
 
-             aq.setRequestAction(action.name());
-             aq.setAction(action.name());
+		aq.setStartTime (startTimeStamp);
 
-             Timestamp startTimeStamp = new Timestamp (System.currentTimeMillis());
+		if (requestInfo != null) {
 
-             aq.setStartTime (startTimeStamp);
-
-             if (requestInfo != null) {
-
-             	if(requestInfo.getSource() != null){
-             		aq.setSource(requestInfo.getSource());
-             	}
-             	if(requestInfo.getRequestorId() != null) {
-             		aq.setRequestorId(requestInfo.getRequestorId());
-             	}
-             	if(requestInfo.getResourceType() != null) {
-             		aq.setRequestScope(requestInfo.getResourceType().name());
-             	}
-             }
+			if(requestInfo.getSource() != null){
+				aq.setSource(requestInfo.getSource());
+			}
+			if(requestInfo.getRequestorId() != null) {
+				aq.setRequestorId(requestInfo.getRequestorId());
+			}
+			if(requestInfo.getResourceType() != null) {
+				aq.setRequestScope(requestInfo.getResourceType().name());
+			}
+		}
              
-             if(ResourceType.operationalEnvironment.name().equalsIgnoreCase(requestScope)) {
-             	aq.setOperationalEnvId(operationalEnvironmentId);
-             	aq.setOperationalEnvName(requestInfo.getInstanceName());
-             }
+		if(ResourceType.operationalEnvironment.name().equalsIgnoreCase(requestScope) && requestInfo != null) {
+			aq.setOperationalEnvId(operationalEnvironmentId);
+			aq.setOperationalEnvName(requestInfo.getInstanceName());
+		}
 
-             aq.setRequestBody (this.requestJSON);
+		aq.setRequestBody (this.requestJSON);
 
-             aq.setRequestStatus (status.toString ());
-             aq.setLastModifiedBy (Constants.MODIFIED_BY_APIHANDLER);
+		aq.setRequestStatus (status.toString ());
+		aq.setLastModifiedBy (Constants.MODIFIED_BY_APIHANDLER);
 
-             if ((status == Status.FAILED) || (status == Status.COMPLETE)) {
-                 aq.setStatusMessage (this.errorMessage);
-                 aq.setResponseBody (this.responseBody);
-                 aq.setProgress(new Long(100));
+		if ((status == Status.FAILED) || (status == Status.COMPLETE)) {
+			aq.setStatusMessage (this.errorMessage);
+			aq.setResponseBody (this.responseBody);
+			aq.setProgress(Long.valueOf(100));
 
-                 Timestamp endTimeStamp = new Timestamp (System.currentTimeMillis());
-                 aq.setEndTime (endTimeStamp);
-             } else if(status == Status.IN_PROGRESS) {
-            	 aq.setProgress(Constants.PROGRESS_REQUEST_IN_PROGRESS);
-             }
-
-             msoLogger.debug ("About to insert a record");
-
-             session.save (aq);
-             session.getTransaction ().commit ();
-             session.close ();
-         } catch (Exception e) {
-         	msoLogger.error (MessageEnum.APIH_DB_INSERT_EXC, "", "", MsoLogger.ErrorCode.DataError, "Exception when creation record request", e);
-             if (session != null) {
-                 session.close ();
-             }
-             if (!status.equals (Status.FAILED)) {
-                 throw e;
-             }
-         }
+			Timestamp endTimeStamp = new Timestamp (System.currentTimeMillis());
+			aq.setEndTime (endTimeStamp);
+		} else if(status == Status.IN_PROGRESS) {
+			aq.setProgress(Constants.PROGRESS_REQUEST_IN_PROGRESS);
+		}
+		infraActiveRequestsRepository.save(aq);
     }
 	
     
     public Map<String, String> getOrchestrationFilters (MultivaluedMap<String, String> queryParams) throws ValidationException {
         String queryParam = null;
-        Map<String, String> orchestrationFilterParams = new HashMap<String, String>();
+        Map<String, String> orchestrationFilterParams = new HashMap<>();
 
         for (Entry<String,List<String>> entry : queryParams.entrySet()) {
             queryParam = entry.getKey();
             try{
           		  for(String value : entry.getValue()) {
           			  if(StringUtils.isBlank(value)) {
-          				  throw new Exception(queryParam + " value");
+          				  throw (new Exception(queryParam + " value"));
           			  }
           			  orchestrationFilterParams.put(queryParam, value);
           		  }
             }catch(Exception e){
-                throw new ValidationException (e.getMessage());
+                throw new ValidationException (e.getMessage(), true);
         	}
         }
 
         return orchestrationFilterParams;
   }
-    
+
     /**
      * Build Error Response for Exception handling.
-     * 
+     *
      * @param int
      * @param httpResponseCode the HTTP response code
      * @param exceptionType.
      * @param text the error description
      * @param messageId
      * @return the web service response
-     *     
+     *
      */
     public Response buildServiceErrorResponse (int httpResponseCode,
 									            MsoException exceptionType,
@@ -372,13 +355,9 @@ public class TenantIsolationRequest {
 
     	this.errorCode = messageId;
 
-    	if (text != null) {
-    		this.errorMessage = text;
-    	}
-    	else {
-    		this.errorMessage = "";
-    	}
+    	this.errorCode = text != null ? text : "";
     	this.httpResponse = Integer.toString(httpResponseCode);
+    	
     	if(errorMessage.length() > 1999){
     	    errorMessage = errorMessage.substring(0, 1999);
     	}
@@ -403,11 +382,9 @@ public class TenantIsolationRequest {
     		se.setMessageId(messageId);
     		se.setText(text);
     		if(variables != null){
-        		if(variables != null){
-        			for(String variable: variables){
-        				se.getVariables().add(variable);
-        			}
-        		}
+    			for(String variable: variables){
+    				se.getVariables().add(variable);
+    			}
     		}
     		re.setServiceException(se);
      	}
@@ -421,7 +398,6 @@ public class TenantIsolationRequest {
         }catch(Exception e){
         	msoLogger.error (MessageEnum.APIH_VALIDATION_ERROR, "", "", MsoLogger.ErrorCode.DataError, "Exception in buildServiceErrorResponse writing exceptionType to string ", e);
         }
-
 
         return Response.status (httpResponseCode).entity(requestErrorStr).build ();
 
@@ -439,14 +415,15 @@ public class TenantIsolationRequest {
     	this.requestId = requestId;
     }
 
-	public void updateFinalStatus(Status failed) {
+	public void updateFinalStatus() {
 		try {
-			(RequestsDatabase.getInstance()).updateInfraFinalStatus (requestId,
-																	status.toString (),
-																	this.errorMessage,
-																	this.progress,
-																	this.responseBody,
-																	Constants.MODIFIED_BY_APIHANDLER);
+			InfraActiveRequests request = new InfraActiveRequests(requestId);
+			request.setRequestStatus(status.toString());
+			request.setStatusMessage(this.errorMessage);
+			request.setProgress(this.progress);
+			request.setResponseBody(this.responseBody);
+			request.setLastModifiedBy(Constants.MODIFIED_BY_APIHANDLER);
+			infraActiveRequestsRepository.save(request);
 		} catch (Exception e) {
 			msoLogger.error(MessageEnum.APIH_DB_UPDATE_EXC, e.getMessage(), "", "", MsoLogger.ErrorCode.DataError, "Exception when updating record in DB");
 			msoLogger.debug ("Exception: ", e);
@@ -463,6 +440,14 @@ public class TenantIsolationRequest {
         case IN_PROGRESS:
         	this.progress = Constants.PROGRESS_REQUEST_IN_PROGRESS;
         	break;
+		case PENDING:
+			break;
+		case TIMEOUT:
+			break;
+		case UNLOCKED:
+			break;
+		default:
+			break;
         }
     }
 
